# draft-maker

./: .gitignore  Draft-Adapter.md  README.md  debug_acceptance.py  debug_dump.py  debug_slice_only.py  pyproject.toml  test.py  test_data_loading.py
.claude/: settings.local.json
draft_adapter/: __init__.py  benchmark.py  calibration.py  cli.py  compress.py  compress_ffn.py  compress_svd.py  config.py  data.py  debug_log.py  distill.py  export.py  inspect.py  modeling_draft.py  prune.py  utils.py
draft_adapter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_compress.py  test_compress_ffn.py  test_compress_svd.py  test_config.py  test_data.py  test_distill_padding.py  test_inspect.py  test_modeling_draft.py
